--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,23 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
 
-  <title>Dunkelziffer</title>
-  <meta name="description" content="Dunkelziffer">
+    <title>Dunkelziffer</title>
+    <meta name="description" content="Dunkelziffer">
 
-  <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/main.css">
 
-  <!--[if lt IE 9]>
+    <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
 
 <body>
-
-  <script src="script/main.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="script/main.js"></script>
 </body>
+
 </html>
