--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,30 @@
 
 <html lang="en">
 
-<head>
-    <meta charset="utf-8">
+    <head>
+        <meta charset="utf-8">
 
-    <title>Dunkelziffer</title>
-    <meta name="description" content="Dunkelziffer">
+        <title>Dunkelziffer</title>
+        <meta name="description" content="Dunkelziffer">
 
-    <link rel="stylesheet" href="style/main.css">
+        <link rel="stylesheet" href="style/bootstrap.min.css">
+        <link rel="stylesheet" href="style/main.css">
 
-    <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-</head>
+        <!--[if lt IE 9]>
+        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+    </head>
 
-<body>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="script/main.js"></script>
-</body>
+    <body>
+
+        <div>
+            <input id="query" type="text" placeholder="Search..."/>
+            <span id="search-indicator" style="display:none;">Loading...</span>
+        </div>
+
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="script/libs/jquery-1.10.2.js"></script>
+        <script src="script/app.js"></script>
+    </body>
 
 </html>
