Show search results in html

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,17 @@
             <span id="search-indicator" style="display:none;">Loading...</span>
         </div>
 
+        <div id="results-clear"></div>
+        <div id="results-dark"></div>
+
+        <div id="result-template" style="display:none;">
+            <a href="#" class="result">
+                <div class="result-title"></div>
+                <div class="result-source"></div>
+                <div class="result-date"></div>
+            </a>
+        </div>
+
         <script src="/socket.io/socket.io.js"></script>
         <script src="script/libs/jquery-1.10.2.js"></script>
         <script src="script/app.js"></script>
