Search result detail

--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,22 @@
             <span id="search-indicator" style="display:none;">Loading...</span>
         </div>
 
-        <div id="results-clear"></div>
-        <div id="results-dark"></div>
+        <div id="results-clear" class="results-container">
+            <div class="results-content"></div>
+            <div class="result-detail-content" style="display:none;">
+                <a href="#" class="result-back-btn">Back to results</a>
+                <div class="result-title"></div>
+                <div class="result-content"></div>
+            </div>
+        </div>
+        <div id="results-dark" class="results-container">
+            <div class="results-content"></div>
+            <div class="result-detail-content" style="display:none;">
+                <a href="#" class="result-back-btn">Back to results</a>
+                <div class="result-title"></div>
+                <div class="result-content"></div>
+            </div>
+        </div>
 
         <div id="result-template" style="display:none;">
             <a href="#" class="result">
