--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
         <title>Dunkelziffer</title>
         <meta name="description" content="Dunkelziffer">
 
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+
         <link rel="stylesheet" href="style/bootstrap.min.css">
         <link rel="stylesheet" href="style/main.css">
 
@@ -23,20 +25,22 @@
             <span id="search-indicator" style="display:none;">Loading...</span>
         </div>
 
-        <div id="results-clear" class="results-container">
-            <div class="results-content"></div>
-            <div class="result-detail-content" style="display:none;">
-                <a href="#" class="result-back-btn">Back to results</a>
-                <div class="result-title"></div>
-                <div class="result-content"></div>
+        <div class="clearfix">
+            <div id="results-clear" class="results-container">
+                <div class="results-content"></div>
+                <div class="result-detail-content" style="display:none;">
+                    <a href="#" class="result-back-btn">Back to results</a>
+                    <div class="result-title"></div>
+                    <div class="result-content"></div>
+                </div>
             </div>
-        </div>
-        <div id="results-dark" class="results-container">
-            <div class="results-content"></div>
-            <div class="result-detail-content" style="display:none;">
-                <a href="#" class="result-back-btn">Back to results</a>
-                <div class="result-title"></div>
-                <div class="result-content"></div>
+            <div id="results-dark" class="results-container">
+                <div class="results-content"></div>
+                <div class="result-detail-content" style="display:none;">
+                    <a href="#" class="result-back-btn">Back to results</a>
+                    <div class="result-title"></div>
+                    <div class="result-content"></div>
+                </div>
             </div>
         </div>
 
