--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,7 @@
 
         <script src="/socket.io/socket.io.js"></script>
         <script src="script/libs/jquery-1.10.2.js"></script>
+        <script src="script/libs/moment-with-locales.js"></script>
         <script src="script/app.js"></script>
     </body>
 
