--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,6 @@
 
         <link rel="stylesheet" href="style/bootstrap.min.css">
         <link rel="stylesheet" href="style/main.css">
-        <style>
-          .loader {
-            background: url('img/loader.gif') no-repeat;
-            width: 400px;
-            height: 400px;
-            position: absolute;
-            display: none;
-          }
-        </style>
 
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -29,7 +20,7 @@
 
     <body>
 
-        <div>
+        <div id="header">
             <div id="logo">
                 <img src="img/logo_dunkelziffer_textonly.svg" alt="Logo" class="img-responsive"/>
             </div>
