--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
     <body>
 
-        <div id="header">
+        <div id="header" class="clearfix">
             <div id="logo">
                 <img src="img/logo_dunkelziffer_textonly.svg" alt="Logo" class="img-responsive"/>
             </div>
