--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
                     <a href="#" class="result-back-btn">Back to results</a>
                     <div class="result-title"></div>
                     <div class="result-content"></div>
+                    <img src="img/left.svg">
                 </div>
             </div>
             <div id="results-dark" class="results-container">
@@ -55,6 +56,7 @@
                     <a href="#" class="result-back-btn">Back to results</a>
                     <div class="result-title"></div>
                     <div class="result-content"></div>
+                    <img src="img/right.svg">
                 </div>
             </div>
         </div>
