--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
                 <div class="results-content"></div>
                 <div class="result-detail-content" style="display:none;">
                     <a href="#" class="result-back-btn">Back to results</a>
-                    <img src="img/left-time.svg">
+                    <!--<img src="img/left-time.svg">-->
                     <div class="result-title"></div>
                     <div class="result-content"></div>
                     <img src="img/left.svg">
@@ -55,7 +55,7 @@
                 <div class="results-content"></div>
                 <div class="result-detail-content" style="display:none;">
                     <a href="#" class="result-back-btn">Back to results</a>
-                    <img src="img/right-time.svg">
+                    <!--<img src="img/right-time.svg">-->
                     <div class="result-title"></div>
                     <div class="result-content"></div>
                     <img src="img/right.svg">
