--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,9 @@
             <div id="logo">
                 <img src="img/logo_dunkelziffer_textonly.svg" alt="Logo" class="img-responsive"/>
             </div>
-            <input id="query" type="text" placeholder="Search..."/>
-            <!--<span id="search-indicator" style="display:none;">Loading...</span>-->
+            <div id="query-container">
+                <input id="query" type="text" placeholder="Search..."/>
+            </div>
         </div>
 
         <div class="clearfix">
